Add GitHub link and button styles to index.html

--- a/index.html
+++ b/index.html
@@ -489,6 +489,23 @@
             font-size: 1.1rem;
             font-weight: bold;
         }
+
+        .github-link, .github-button {
+            display: inline-flex;
+            align-items: center;
+            gap: 6px;
+            padding: 8px 16px;
+            background: #24292e;
+            color: white;
+            text-decoration: none;
+            border-radius: 6px;
+            font-size: 14px;
+            transition: background 0.2s;
+        }
+
+    .github-link:hover, .github-button:hover {
+        background: #2c3e50;
+    }
     </style>
 </head>
 <body>
