Update GitHub link and remove paper reference

--- a/index.html
+++ b/index.html
@@ -515,15 +515,11 @@
             <p>Interactive educational guide • Click architecture blocks to see code</p>
         </div>
         <div>
-            <a href="https://github.com/tanpuekai/microGPT_webEdu" target="_blank" rel="noopener noreferrer" class="github-link">
-                <span>📁</span> GitHub
+            <a href="https://github.com/tanpuekai/microGPT_webEdu" target="_blank" class="paper-link">
+                <span>📁</span> GitHub tanpuekai/microGPT_webEdu
             </a>
         </div>
-        <div>
-            <a href="https://arxiv.org/abs/1706.03762" target="_blank" class="paper-link">
-                📄 Attention Is All You Need (2017)
-            </a>
-        </div>
+
     </header>
 
     <div class="split-container">
