--- a/index.html
+++ b/index.html
@@ -515,9 +515,11 @@
             <p>Interactive educational guide • Click architecture blocks to see code</p>
         </div>
         <div>
-            <a href="https://github.com/tanpuekai/microGPT_webEdu" target="_blank" class="paper-link">
-                <span>📁</span> GitHub tanpuekai/microGPT_webEdu
-            </a>
+            <p>
+                <a href="https://github.com/tanpuekai/microGPT_webEdu" target="_blank" class="paper-link">
+                    <b>GitHub</b> peikaichen/microGPT_webEdu
+                </a>
+            </p>
         </div>
 
     </header>
